[gd_scene load_steps=8 format=2]

[ext_resource path="res://Code/UI.gd" type="Script" id=1]
[ext_resource path="res://NerkoOne-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://—Pngtree—pure black ring_5487753.png" type="Texture" id=3]
[ext_resource path="res://Icons/keyicon.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinsText" type="Label" parent="."]
anchor_left = 0.86
anchor_right = 0.86
margin_left = 13.36
margin_top = 25.0
margin_right = 107.36
margin_bottom = 64.0
custom_fonts/font = SubResource( 1 )
text = "Coins : 10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeysText" type="Label" parent="."]
anchor_left = 0.86
anchor_right = 0.86
margin_left = 13.36
margin_top = 45.0
margin_right = 107.36
margin_bottom = 84.0
custom_fonts/font = SubResource( 2 )
text = "Keys : 0 / 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PickedKey" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -167.0
margin_top = -54.0
margin_right = 182.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 3 )
text = "You picked up a key."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeyTimer" type="Timer" parent="PickedKey"]
wait_time = 4.5
autostart = true

[node name="PickedCoin" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -167.0
margin_top = -54.0
margin_right = 182.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 3 )
text = "You picked up a coin."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinTimer" type="Timer" parent="PickedCoin"]
wait_time = 4.5
autostart = true

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.512
anchor_bottom = 0.52
margin_right = 1187.71
margin_bottom = 1188.0
rect_scale = Vector2( 0.01, 0.01 )
texture = ExtResource( 3 )

[node name="keyicon" type="TextureRect" parent="."]
margin_left = 866.809
margin_top = 46.7909
margin_right = 1091.81
margin_bottom = 271.791
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )
[connection signal="timeout" from="PickedKey/KeyTimer" to="." method="_on_KeyTimer_timeout"]
[connection signal="timeout" from="PickedCoin/CoinTimer" to="." method="_on_CoinTimer_timeout"]
